[package]
name = "deploy-payload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-curl = "0.2"
chrono = "0.4"
curl-http-client = "0.3"
curl = "0.4"
directories = "5.0"
env_logger = "0.10"
http = "0.2"
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.28.0", features = ["full"] }
url = "2.3"
winapi = "0.3"
